Fixed layout problems with navbar

--- a/files/styles.css
+++ b/files/styles.css
@@ -37,7 +37,6 @@ header {
     border-bottom: 4px solid hsl(0, 0%, 80%);
     z-index: 9999;
     font-size: 1.2em;
-    box-shadow: 0px 5px 10px hsla(0, 0%, 0%, 0.2)
 }
 
 #logo {
@@ -171,7 +170,6 @@ div.content {
     position: absolute;
     height: auto;
     width: 100%;
-    /*top: 6em;*/
 }
 
 section.main {
@@ -180,7 +178,6 @@ section.main {
     margin: 1em auto;
     padding: 1em 2em;
     text-align: center;
-    margin-top: 6em;
 }
 
 /* Loading icon */
@@ -542,6 +539,7 @@ ul.cards li div.name {
 
 section.activity {
     margin: 1em auto;
+    margin-top: 5em;
     color: hsl(0, 0%, 0%);
     padding: 3em 1em 1em 1em;
     background-color: hsl(0, 0%, 80%);
@@ -739,6 +737,9 @@ td.commentRow select {
     }
 }
 @media (min-width: 1024px) {
+    section.main {
+        margin-top: 6em;
+    }
 
     section.activity {
         max-width: 360px;
